[package]
name = "husleie-app"
version = "0.1.0"
authors = ["eireye <oeye@protonmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"

[build-dependencies]
slint-build = "1.0"

[package.metadata.bundle]
name = "Leie utregner"
identifier = "io.github.eireye.husleie-app"